# cloesce

./: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  backend-ui.ts  cloesce.code-workspace  new-syntax.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  runtime-e2e-new-syntax-plan.md
.claude/: plan.md
src/compiler/: Cargo.toml
src/compiler/ast/: Cargo.toml
src/compiler/ast/src/: lib.rs
src/compiler/cli/: Cargo.toml
src/compiler/cli/src/: lib.rs
src/compiler/client/src/templates/: ts.hbs
src/compiler/codegen/: Cargo.toml
src/compiler/codegen/client/src/: lib.rs
src/compiler/codegen/migrations/tests/: migrations_test.rs
src/compiler/codegen/src/: lib.rs  mappers.rs
src/compiler/codegen/src/backend/: mod.rs
src/compiler/codegen/src/client/: mappers.rs  mod.rs
src/compiler/codegen/src/migrations/: mod.rs
src/compiler/codegen/src/orm/: mod.rs  select.rs
src/compiler/codegen/src/workers/: mod.rs
src/compiler/codegen/src/wrangler/: migrations.rs  mod.rs  spec.rs
src/compiler/codegen/templates/: backend.ts.jinja  client.ts.jinja  durable_migration.ts.jinja
src/compiler/codegen/tests/: backend_tests.rs  client_tests.rs  migrations_test.rs  select_tests.rs  shared.rs  snapshot_tests.rs  workers_tests.rs  wrangler_tests.rs
src/compiler/codegen/tests/common/: mod.rs
src/compiler/codegen/tests/snapshots/: backend_tests__backend_code_generation_snapshot.snap  backend_tests__backend_code_generation_snapshot.snap.new  client_tests__client_code_generation_snapshot.snap  snapshot_tests__backend_code_generation_snapshot.snap  snapshot_tests__backend_code_generation_snapshot.snap.new  snapshot_tests__client_code_generation_snapshot.snap  snapshot_tests__client_code_generation_snapshot.snap.new  snapshot_tests__durable_migration_generation_snapshot.snap  snapshot_tests__durable_migration_generation_snapshot.snap.new
src/compiler/compiler-test/: Cargo.toml
src/compiler/compiler-test/src/: lib.rs  src_str.rs
src/compiler/frontend/: Cargo.toml
src/compiler/frontend/src/: lexer.rs  lib.rs
src/compiler/frontend/src/err/: mod.rs
src/compiler/frontend/src/fmt/: mod.rs
src/compiler/frontend/src/formatter/: doc.rs  mod.rs
src/compiler/frontend/src/parser/: api.rs  data_source.rs  env.rs  mod.rs  model.rs  service.rs
src/compiler/frontend/tests/: formatter_tests.rs  lexer_tests.rs  parser_tests.rs
src/compiler/frontend/tests/snapshots/: formatter_tests__comments_retained.snap  formatter_tests__format_non_lossy.snap
src/compiler/generator-test/src/: lib.rs
src/compiler/idl/: Cargo.toml
src/compiler/idl/src/: lib.rs
src/compiler/lexer/: Cargo.toml
src/compiler/migrations/: Cargo.toml
src/compiler/migrations/src/: lib.rs
src/compiler/migrations/tests/: migrations_tests.rs
src/compiler/orm/: Cargo.toml
src/compiler/orm/src/: lib.rs  map.rs  select.rs  upsert.rs  validate.rs
src/compiler/orm/src/query/: explain.rs  mod.rs  plan.rs  planner.rs
src/compiler/orm/tests/: explain_tests.rs  map_tests.rs  query_tests.rs  save_tests.rs  select_tests.rs  upsert_tests.rs  validate_tests.rs
src/compiler/orm/tests/common/: executor.rs  mod.rs  save_executor.rs  select_executor.rs  setup.rs
src/compiler/orm/tests/snapshots/: explain_tests__explain_save_snapshot.snap  explain_tests__explain_select_get_snapshot.snap  explain_tests__explain_select_list_snapshot.snap
src/compiler/parser/src/: parse_ast.rs
src/compiler/parser/src/blocks/: mod.rs  model.rs
src/compiler/semantic/: Cargo.toml
src/compiler/semantic/src/: api.rs  crud.rs  d1_model.rs  data_source.rs  env.rs  err.rs  fmt.rs  lib.rs  model.rs  trie.rs
src/compiler/semantic/tests/: analysis_tests.rs  crud_tests.rs  data_source_tests.rs
src/compiler/workers/tests/: workers_tests.rs
src/compiler/wrangler/: Cargo.toml
src/frontend/orm/: Cargo.toml
src/frontend/orm/src/: common.rs  lib.rs  list.rs  map.rs  orm.rs  upsert.rs
src/frontend/orm/src/methods/: list.rs  map.rs  mod.rs
src/generator/: Cargo.toml  cidl.json  package-lock.json  worker.ts  wrangler.toml
src/generator/ast/: Cargo.toml
src/generator/ast/src/: builder.rs  err.rs  lib.rs  semantic.rs
src/generator/ast/tests/: analysis_tests.rs
src/generator/cli/: Cargo.toml
src/generator/cli/src/: lib.rs  main.rs
src/generator/cli/tests/: client_tests.rs  d1_wrangler_tests.rs
src/generator/client/: Cargo.toml
src/generator/client/src/: lib.rs  mappers.rs
src/generator/client/tests/: client_tests.rs  snaphot_tests.rs
src/generator/common/: Cargo.toml
src/generator/common/src/: builder.rs  err.rs  lib.rs  wrangler.rs
src/generator/d1/: Cargo.toml  out
src/generator/d1/src/: lib.rs  sql.rs  tables.rs
src/generator/d1/tests/: d1_tests.rs  d1_wrangler_snap_tests.rs  d1_wrangler_tests.rs  snap_tests.rs  wrangler_tests.rs
src/generator/fixtures/: cidl.json  wrangler.json
src/generator/generator-test/: Cargo.toml
src/generator/generator-test/src/: lib.rs
src/generator/lexer/src/: lib.rs
src/generator/migrations/: Cargo.toml
src/generator/migrations/src/: fmt.rs  lib.rs
src/generator/migrations/tests/: migrations_test.rs
src/generator/parser/: Cargo.toml
src/generator/parser/src/: api.rs  data_source.rs  lib.rs  model.rs  service.rs
src/generator/parser/tests/: parser_tests.rs
src/generator/semantic/src/: lib.rs
src/generator/semantic/tests/: analysis_tests.rs
src/generator/sql/: Cargo.toml
src/generator/workers/: Cargo.toml
src/generator/workers/src/: lib.rs  output.ts  tests.rs  typescript.rs
src/generator/workers/tests/: generator_tests.rs  test.ts  workers_tests.rs
src/generator/wrangler/: Cargo.toml
src/generator/wrangler/src/: lib.rs
src/generator/wrangler/test/: wrangler_tests.rs
src/generator/wrangler/tests/: wrangler_tests.rs
src/orm/: Cargo.toml
src/orm/.cargo/: config.toml
src/orm/src/: lib.rs
src/orm/src/methods/: json.rs  list.rs  map.rs  mod.rs  select.rs  upsert.rs  validate.rs
tests/regression/: Cargo.toml
tests/regression/src/: lib.rs
(+991 files in other folders)
