[workspace]
resolver = "3"
members = [
    # "cli",
    "ast",
    # "codegen",
    "semantic",
    "compiler-test",
    "frontend",
]

[workspace.dependencies]
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.4"
tracing = "0.1.44"
