[workspace]
members = [
    # "cli",
    "ast",
    "frontend",
    # "semantic",
    # "codegen",
    "compiler-test",
    # "migrations",
    # "orm",
]
resolver = "3"

[workspace.dependencies]
ariadne = "0.6.0"
indexmap = { version = "2.13.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.4"
tracing = "0.1.44"
