[workspace]
resolver = "3"
members = [
    "cli",
    "ast",
    "migrations",
    "workers",
    "client",
    "wrangler",
    "semantic",
    "generator-test",
]

[workspace.dependencies]
indexmap = { version = "2.12.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
tracing = "0.1.41"
