[package]
name = "regression"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
glob = "0.3.3"
similar = "2.7.0"
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.22"

[profile.dev]
opt-level = 0
debug = true
