[package]
name = "cli"
version = "0.3.1"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
ast = { path = "../ast" }
clap = { version = "4.5.60", features = ["derive"] }
codegen = { path = "../codegen" }
frontend = { path = "../frontend" }
json_comments = { workspace = true }
migrations = { path = "../migrations" }
semantic = { path = "../semantic" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3.22"
ureq = { version = "3.3.0", features = ["json"] }

[[bin]]
name = "cloesce"
path = "bin/cloesce.rs"


[features]
regression-tests = []
