[package]
name = "cli"
version = "0.0.0"
edition = "2024"

[dependencies]
idl = { path = "../idl" }
clap = { workspace = true }
codegen = { path = "../codegen" }
dirs = "6.0.0"
frontend = { path = "../frontend" }
json_comments = { workspace = true }
migrations = { path = "../migrations" }
semantic = { path = "../semantic" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ureq = { version = "3.3.0", features = [
    "json",
    "native-tls",
], default-features = false }

[[bin]]
name = "cloesce"
path = "bin/cloesce.rs"


[features]
regression-tests = []
