[package]
name = "codegen"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
askama = "0.14.0"
indexmap = { workspace = true }
json_comments = "0.2.2"
migrations = { path = "../migrations" }
orm = { path = "../orm" }
pathdiff = "0.2.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlformat = "0.5.0"
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
insta = "1.46.3"


[lib]
doctest = false
