[package]
name = "codegen"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
askama = "0.15.6"
indexmap = { workspace = true }
json_comments = { workspace = true }
migrations = { path = "../migrations" }
orm = { path = "../orm" }
pathdiff = "0.2.3"
serde = { workspace = true }
serde_json = { workspace = true }
sqlformat = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
insta = { workspace = true }


[lib]
doctest = false
