[package]
name = "frontend"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
ariadne = { workspace = true }
chumsky = "0.12.0"
logos = "0.16.1"
indexmap = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
insta = { workspace = true }

[lib]
doctest = false
