[package]
name = "frontend"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
idl = { path = "../idl" }
chumsky = "0.12.0"
indexmap = { workspace = true }
logos = "0.16.1"

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
insta = { workspace = true }

[lib]
doctest = false
