[package]
name = "migrations"
edition = "2024"

[dependencies]
idl = { path = "../idl" }
indexmap = { workspace = true }
sea-query = { workspace = true }
sqlformat = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
indexmap = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }


[lib]
doctest = false
