[package]
name = "orm"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
base64 = "0.22"
chrono = { version = "0.4.44", features = ["serde"], default-features = false }
frontend = { path = "../frontend" }
indexmap = { workspace = true }
regex = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
compiler-test = { path = "../compiler-test" }
migrations = { path = "../migrations" }
sqlx = { workspace = true }

[[bin]]
name = "orm"
path = "bin/orm.rs"

[lib]
doctest = false
