[package]
name = "orm"
edition = "2024"

[dependencies]
idl = { path = "../idl" }
base64 = "0.22"
frontend = { path = "../frontend" }
regex-lite = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
migrations = { path = "../migrations" }
sqlx = { workspace = true }

[[bin]]
name = "orm"
path = "bin/orm.rs"

[lib]
doctest = false
