[package]
name = "semantic"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
ast = { path = "../ast" }
frontend = { path = "../frontend" }
indexmap = { workspace = true }
orm = { path = "../orm" }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
sqlx = { workspace = true }

[lib]
doctest = false
