[package]
name = "semantic"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
idl = { path = "../idl" }
frontend = { path = "../frontend" }
indexmap = { workspace = true }
regex = { workspace = true }
orm = { path = "../orm" }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
sqlx = { workspace = true }

[lib]
doctest = false
