[package]
name = "semantic"
edition = "2024"

[dependencies]
ariadne = { workspace = true }
idl = { path = "../idl" }
frontend = { path = "../frontend" }
orm = { path = "../orm" }
indexmap = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
compiler-test = { path = "../compiler-test" }
sqlx = { workspace = true }

[lib]
doctest = false
