[package]
name = "orm"
version = "0.0.3"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
sea-query = "0.32.7"
serde = "1.0.219"
serde_json = "1.0.143"
ast = { path = "../../generator/ast" }

[dev-dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
d1 = { path = "../../generator/d1" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "z"
panic = "abort"
