[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
clap = { version = "4.5.46", features = ["derive"] }
migrations = { path = "../migrations" }
client = { path = "../client" }
workers = { path = "../workers" }
wrangler = { path = "../wrangler" }
semantic = { path = "../semantic" }
tracing-subscriber = "0.3.20"
tracing = { workspace = true }
