[package]
name = "cli"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
clap = { version = "4.5.60", features = ["derive"] }
migrations = { path = "../migrations" }
client = { path = "../client" }
workers = { path = "../workers" }
wrangler = { path = "../wrangler" }
semantic = { path = "../semantic" }
tracing-subscriber = "0.3.22"
tracing = { workspace = true }

[[bin]]
name = "cli"
path = "src/main.rs"
