[package]
name = "client"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
handlebars = "6.3.2"
serde_json = { workspace = true }

[dev-dependencies]
generator-test = { path = "../generator-test" }
semantic = { path = "../semantic" }
workers = { path = "../workers" }
insta = "1.45.1"
