[package]
name = "migrations"
version = "0.0.1"
edition = "2024"

[dependencies]
ast = { path = "../ast" }
indexmap = { workspace = true }
sea-query = "0.32.7"
sqlformat = "0.5.0"
tracing = { workspace = true }

[dev-dependencies]
generator-test = { path = "../generator-test" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
